Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56025

Popup does not respect explicit size

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.1
    • 5.7.0
    • Quick: Controls 2
    • None
    • fbe806c544a45c83f091109e04fab5d86620183f

      The following popup picks up the implicit size of the content, the Text element, instead of using the supplied explicit size.

      import QtQuick 2.7
      import QtQuick.Controls 2.0
      
      ApplicationWindow {
          id: window
          width: 200
          height: 228
          visible: true
      
          Popup {
              x: (parent.width - width) / 2
              y: (parent.height - height) / 2
              width: parent.width / 2
              height: parent.height / 2
      
              visible: true
              closePolicy: Popup.NoAutoClose
      
              Text { text: "Popup" }
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes