Fix Popup to respect explicit size

[ChangeLog][Controls][Popup] Fixed to respect explicitly set width and
height.

Task-number: QTBUG-56025
Change-Id: I7c8b0dcf59459a313c4c52eda44de45f1ab648ea
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>